# swiss-tts-engine

./: .dockerignore  .gitignore  App.js  CLAUDE.md  Dockerfile  README.md  dev.sh  docker-compose.yml  metro.config.js  mise.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  trivy.yml
__tests__/: metro.config.test.js
apps/swiss-tts-app/: App.js  README.md  app.json  package-lock.json  package.json
apps/swiss-tts-app/__tests__/: App.test.js  eas.config.test.js
apps/swiss-tts-engine/: README.md  pyproject.toml
apps/swiss-tts-engine/src/swiss_tts/: api.py  config.py  main.py  translator.py
apps/swiss-tts-engine/tests/: dev_sh_test.sh  test_api.py  test_main.py  test_translator.py
public/: index.html
src/swiss_tts/: api.py  config.py  main.py  translator.py
swiss-tts-app/: App.js  app.json  package-lock.json  package.json
swiss-tts-app/__tests__/: App.test.js  eas.config.test.js
tests/: dev_sh_test.sh  test_api.py  test_api_client.py  test_config.py  test_main.py  test_translator.py
