[project]
name = "swiss-tts-monorepo"
version = "1.0.0"
description = "Monorepo for Swiss German text-to-speech applications and components."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.18",
]

[tool.ruff]
exclude = [
    ".venv",
    "node_modules",
    "build",
    "uv.lock",
]

[tool.uv.workspace]
members = [
    "apps/swiss-tts-engine",
]
