[project]
name = "swiss-tts-engine"
version = "1.0.0"
description = "A multi-dialect Swiss German text-to-speech engine built on ESPnet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "espnet>=2023.1",
    "espnet-model-zoo>=0.1.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "torchaudio>=2.11.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_tts"]
